<resources xmlns:xliff="http://schemas.android.com/apk/res-auto" formatted="false">
    <string name="app_name">IMCI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="main_menu">Main Menu</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
  <string name="title_template_step">Step <xliff:g id="step_number">%%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="result_activity">ResultActivity</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="Pdiseases">Possible diseases</string>
    <string name="treatments">Treatments</string>
    <string name="oral_drugs">Oral drugs at home</string>
    <string name="submit">Submit</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_settings">Settings</string>
    <string name="pick_time">Pick time</string>
    <string name="selectdate">Select Date of Visit</string>
     <string name="care_4_development">Ask questions about how mother cares for her child as below:\n
         <b>Ask:</b>\n• How do you play with your child?\n• How do you communicate with your child?</string>
    <string name="care_4_development_2"><b>Compare the mothers answers to the recommendation </b></string>
    <string name="care_4_development_3"><b>for care and development</b></string>
    <string name="young_topic_severe_dehydration">SEVERE DEHYDRATION</string>
    <string name="young_topic_some_dehydration">SOME DEHYDRATION</string>
    <string name="young_topic_no_dehydration">NO DEHYDRATION</string>
    <string name="young_topic_severe_prolonged_diarrhoea">SEVERE PROLONGED DIARRHOEA</string>
    <string name="young_signs_severe_dehydration"> Two of the following signs:\n• Lethargic or unconscious\n• Sunken eyes\n• Skin pinch goes back very slowly\n
</string>
    <string name="young_signs_some_dehydration">        • Restless, irritable\n• Sunken eyes\n• Drinks eagerly, thirsty\n• Skin pinch goes back slowly
</string>
    <string name="young_signs_severe_prolonged">        • Diarrhoea lasting 7 days or more.\n
</string>
    <string name="young_topic_possible_serious_abdominal_prob">POSSIBLE SERIOUS ABDOMINAL PROBLEM</string>
    <string name="young_hiv"><b><u>ASK</u></b>        \n• Ask for mother’s  HIV status  to establish child’s HIV exposure*.\n
Is it: \n
\t\t-Reactive\n
\t\t-Non reactive\n
\t\t-Unknown\n• Ask if child has had any TB contact.\n\n
<u>LOOK, FEEL AND  DIAGNOSE:</u> \n\n
 <b> Child ≤ 18 months\n</b>  • If mother’s HIV status  is unknown, conduct an  antibody test (rapid test)  on mother or child to
determine HIV exposure.\n• If mother  is or child’s  antibody test is  POSITIVE  the child  is HIV exposed.\n
Take DBS  for DNA PCR  testing at six weeks or  earliest contact thereafter.\n\n
<u>Child ≥ 18 months</u>\n
If mother\'s antibody test is POSITIVE, the child is exposed. Conduct an antibody test on child.\n
        \n
        </string>
    <string name="young_hiv_two">
        <b>NB: See Early Infant Diagnosis (EID) Algorithm.</b>\n
        </string>
    <string name="young_hiv_three">
<b>PRESUMPTIVE SYMPTOMATIC DIAGNOSIS OF HIV INFECTION IN CHILDREN &lt; 18 MONTHS</b>\n\n
        </string>
    <string name="young_hiv_four">
<u>LOOK and FEEL</u>\n
•   Pneumonia***\n
•   Oral Candidiasis / thrush\n
•   Severe sepsis\n
•   Other AIDS defining conditions**\n
        </string>
    <string name="young_hiv_five">
        Presumptive HIV diagnosis should be confirmed at the earliest opportunity.
        \n\n<b>Classify HIV status</b>
</string>
    <string name="signs_no_dehydration">Not enough signs to classify as some or severe dehydration.\n
</string>
    <string name="signs_dysentry">        • Blood in the stool.
</string>
    <string name="Plan_A_Counsel_The_Mother"><b>Counsel the mother on the 4 Rules of Home Treatment: \n\n
Give Extra Fluids, Give Zinc Sulphate, Continue Feeding, Advise when to Return</b></string>
    <string name="Plan_A_One"><b>1. GIVE EXTRA FLUID(Give ORS and other fluids- as much as the child will take)</b>\n</string>
    <string name="Plan_A_Advise_Mother">    • <b>ADVISE THE MOTHER</b>\n\t-Breastfeed frequently and for longer at each feed.\n\t-If the child is not exclusively breastfed,give ORS in addition to breast milk.\n\t-If the child is not exclusively, give one more of the following:  ORS solution, food-based fluids(Soup, enriched uji and yoghurt drinks e.g.mala), or safe water.\n\t-Give fresh fruit juice or mashed bananas to provide potassium.\n\t-Advise mothers to continue giving ORS as instructed.\n
</string>
    <string name="Plan_A_Teach_To_Give_ORS">    • <b>TEACH THE MOTHER HOW TO MIX AND GIVE ORS. GIVE THE MOTHER 4 PACKETS OF ORS TO USE AT HOME</b>.\n
</string>
    <string name="Plan_A_Show_Mother">    • <b>SHOW THE MOTHER HOW MUCH FLUID TO GIVE IN ADDITION TO THE USUAL FLUID INTAKE:</b> \n\n Up to 2 years: 50 to 100 ml after each loose stool.\n2 years or more: 100 to 200 ml after each loose stool.\n
    <b>Advise the mother to:</b>
     \n
    \t-Give frequent small sips from a cup.\n
   \t-If the child vomits, wait 10 minutes.Then continue, but more slowly.\n
   \t-Continue giving extra fluids until the diarrhoea stops.\n
</string>
    <string name="Plan_A_Two"><b>2. GIVE ZINC SULPHATE AND VITAMIN A</b>\n</string>
    <string name="Plan_A_Zinc_Sulphate">        • <b>TELL THE MOTHER HOW MUCH ZINC SULPHATE TO GIVE:</b> \n\t-Up to 6 months: 1/2 tablet per days for 10 days\n\t-6 months or more: 1 tablet per day for 10 days\n
</string>
    <string name="Continue_Feeding"><b>3. CONTINUE FEEDING</b></string>
    <string name="When_To_Return"><b>4. WHEN TO RETURN</b></string>
    <string name="Plan_B_Give_Four_Hour"><b>Give in clinic the recommended amount of ORS over 4-hour period</b></string>
    <string name="Plan_B_Determine_ORS"><b>1.DETERMINE AMOUNT OF ORS TO GIVE DURING FIRST 4 HOURS.</b>\n
    • The appropriate amount of ORS required(in ml) should be calculated by multiplying the child\'s weight(in kgs) with
    75: \n• Use the child\'s age only when you do not know the weight.\n• If the child wants more ORS than shown, give more.\n• For infants under 6 months who are not breastfed, also give 100-200 ml clean water during this period.
</string>
    <string name="Plan_B_Show_Mother">       <b>2.SHOW MOTHER HOW TO GIVE ORS SOLUTION.</b> \n
        • Give frequently small sips from a cup(or a spoon every 1-2 minutes for a child under 2 years).\n• Check from time to time to see if there are any problems. If the child vomits,
        wait for 10 minutes then continue but more slowly.\n• Continue breastfeeding whenever the child wants.\n• If the child\'s eyelids become puffy, stop ORS and give plain water or breast milk. Give ORS according to plan A
        when puffiness is gone.\n
</string>
    <string name="Plan_B_After_Four_Hours">      <b> 3.AFTER 4 HOURS.</b> \n
        • Reassess the child and classify for dehydration.\n• Select the appropriate plan to continue treatment.\n• Begin feeding the child in the clinic.
</string>
    <string name="Plan_B_Mother_Leave">    <b>4.IF THE MOTHER MUST LEAVE BEFORE COMPLETING TREATMENT:</b>     \n
        • Show her how to prepare ORS solution at home.\n• Show her how much ORS to give to finish 4-hour treatment at home.\n• Give her enough ORS satchets to complete rehydration under this plan.Also give her
        4 ORS satchets to continue  with plan A. Explain the four rules of home treatment.\n
        \t\t-GIVE EXTRA FLUID.\n
        \t\t-GIVE ZINC SULPHATE AND VITAMIN A.\n
        \t\t-CONTINUE FEEDING.\n
        \t\t-WHEN TO RETURN.
</string>
       <string name="evaluate_baby_breathing"><b>Evaluate the baby\'s breathing after stimulation: </b>\n
    • A baby who is gasping or not breathing at all will require resuscitation.</string>
    <string name="keep_baby_warm"><b>Keep the baby warm</b>\n• Place the baby onto a firm, clean and warm surface.\n
    • Inform the mother that the baby has difficulty breathing and that you will help the baby breathe.\n
    • Keep the baby wrapped and under a radiant heater if possible.
</string>
    <string name="open_airway"><b>Open the airway</b>\n
    • Position the head so that it is slightly extended.\n
    • Suction the mouth and then the nose.\n
    • Introduce the suction tube into the newborn\'s mouth 5cm from lips and suck while withdrawing.\n
    • Introduce the suction tube 3cm into each nostril and suck while withdrawing until no mucus.\n
    • Repeat each suction if necessary but no more than twice and no more than 20 seconds in total.
</string>
    <string name="if_still_no_breathing"><b>If still no breathing, ventilate</b>\n• Place mask to cover chin, mouth and nose.\n
    • Form seal.\n
    • Squeeze bag attached to the mask with 2 fingers or whole hand, according to bagsize, 2 or 3 times\n
    • Observe rise of chest. If chest not rising : \n
    \t\t\t• Reposition head.\n
    \t\t\t• Check mask heal.\n
    \t\t\t• Squeeze bag harder.\n
    • Once good seal and chest rising, ventilate at 40 squeezes per minute until baby starts breathing spontaneously.
</string>
    <string name="breathing_or_crying"><b>If breathing or crying, stop ventilating</b>\n
    • Look at the chest for indrawing.\n
    • Count breaths per minute.\n
    • If breathing more than 30 breaths per minute and no severe chest drawing: \n
    \t\t\t• Do not ventilate any more.\n
    \t\t\t• Put the baby in skin to skin contact on mother\'s chest and continue care.\n
    \t\t\t• Monitor every 15 minutes for breathing and warmth.\n
    \t\t\t• Tell the mother that the baby will probably be well.
    \n\n
<b>DO NOT LEAVE THE BABY ALONE</b>\n</string>
    <string name="breathing_less_severe"><b>If breathing less than 30 breaths per minute or severe chest indrawing:</b>\n
    • Continue ventilating.\n
    • Arrange for immediate referral.\n
    • Explain to the mother what has happened,what are you doing and why?\n
    • Ventilate during referral.\n
    • Record the event on the referral form .
</string>
    <string name="breathing_gasping"><b>If no breathing or gasping at all after 20 minutes ventilation</b> \n
    • Stop ventilating, the baby is dead.\n
    • Explain to the mother and give supportive care.\n
    • Record the event.
</string>
    <string name="when_to_ret">
        <b><u>When to return to a health worker or health facility:</u></b>
    </string>
<string name="give_home_care_for_the_young_infant_one">        • Breastfeed frequently, as often and for long as the infant wants, day or night, during sickness and health.

</string>
<string name="give_home_care_for_the_young_infant_two">
    • In cool weather, cover the infant\'s head and feet and dress the infant with extra clothing.
</string>
    <string name="if_baby_cannot_be_breastfed">• If baby cannot be breastfed, counsel on alternative feeding.</string>
</resources>