<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Counsel_The_Mother"
            android:textSize="18dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_One"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Advise_Mother"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Teach_To_Give_ORS"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Show_Mother"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Two"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_A_Zinc_Sulphate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue_Feeding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/When_To_Return"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

</ScrollView>