<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrl_2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAD2"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/scrl_1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FAFAD2"
        android:orientation="vertical">


        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/evaluate_baby_breathing"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/signsDehydrationPink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/keep_baby_warm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/open_airway"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/space2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/if_still_no_breathing"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/breathing_or_crying"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/signsDehydration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/breathing_less_severe"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/breathing_gasping"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>