<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_B_Give_Four_Hour"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_B_Determine_ORS"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <Button
             android:id="@+id/btn_ors"
             android:layout_width="280dp"
             android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
             android:text="ORS Dosage Table " />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_B_Show_Mother"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_B_After_Four_Hours"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

         <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plan_B_Mother_Leave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
    </LinearLayout>

</ScrollView>